# mezzo

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  mezzo.cabal  stack.yaml
examples/: Chopin.hs  Counterpoint.hs  FrereJacques.hs  FurElise.hs  HappyBirthday.hs  Harmonisation.hs  LICENSE  README.md  mezzo-examples.cabal  stack.yaml
examples/chopin/: Chopin.hs
examples/chopin/Chopin/: Part1.hs  Part2.hs
examples/fur-elise/: FurElise.hs
examples/fur-elise/FurElise/: Episode1.hs  Episode2.hs  Episode3.hs
examples/other/: Bach.hs  Counterpoint.hs  HappyBirthday.hs  Harmonisation.hs
examples/src/: Chopin.hs  FurElise.hs
examples/src/Chopin/: Part1.hs  Part2.hs
examples/src/FurElise/: Episode1.hs  Episode2.hs  Episode3.hs  Episode4.hs  Theme.hs
examples/src/Other/: Bach.hs  Bumblebee.hs  ClappingMusic.hs  Counterpoint.hs  FirstSpecies.hs  HappyBirthday.hs  Harmonisation.hs
src/: Lib.hs  Mezzo.hs
src/Mezzo/: Compose.hs  Model.hs  Render.hs
src/Mezzo/Compose/: Basic.hs  Builder.hs  Chords.hs  Combine.hs  Harmonic.hs  Harmony.hs  Intervals.hs  Templates.hs  Types.hs
src/Mezzo/Model/: Constraints.hs  Errors.hs  Harmony.hs  Music.hs  Plugin.hs  Prim.hs  Reify.hs  Types.hs
src/Mezzo/Model/Harmony/: Chords.hs  Functional.hs  Motion.hs
src/Mezzo/Model/Rules/: Classical.hs  ClassicalRules.hs  RuleSet.hs  Strict.hs
src/Mezzo/Model/Types/: Families.hs  Music.hs  Prim.hs
src/Mezzo/Render/: MIDI.hs  Score.hs  Transform.hs
test/: CompTestsCompile.hs  CompTestsFail.hs  Main.hs  PrimSpec.hs  ShouldTypecheck.hs  Spec.hs  TestUtils.hs  TypeSpec.hs
