name:                mezzo
version:             0.2.0.1
synopsis:            Typesafe music composition
description:         A Haskell music composition library that enforces common
                     musical rules in the type system.
homepage:            https://github.com/DimaSamoz/mezzo#readme
license:             MIT
license-file:        LICENSE
author:              Dima Szamozvancev
maintainer:          ds709@cam.ac.uk
copyright:           2016 Dima Samozvancev
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mezzo
                     , Mezzo.Model
                     , Mezzo.Model.Prim
                     , Mezzo.Model.Music
                     , Mezzo.Model.Types
                     , Mezzo.Model.Harmony.Motion
                     , Mezzo.Model.Harmony.Chords
                     , Mezzo.Model.Harmony.Functional
                     , Mezzo.Model.Reify

                     , Mezzo.Compose
                     , Mezzo.Compose.Types
                     , Mezzo.Compose.Builder
                     , Mezzo.Compose.Templates
                     , Mezzo.Compose.Basic
                     , Mezzo.Compose.Harmonic
                     , Mezzo.Compose.Combine

                     , Mezzo.Render
                     , Mezzo.Render.MIDI

  build-depends:       base >= 4.7 && < 5
                     , ghc-typelits-natnormalise
                     , template-haskell
                     , HCodecs
                     , boxes
  default-language:    Haskell2010

test-suite mezzo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Main
                     , PrimSpec
                     , TypeSpec
  build-depends:       base
                     , mezzo
                     , hspec
                     , QuickCheck
                    --  , deepseq
                     , should-not-typecheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DimaSamoz/mezzo
