name:                mezzo-examples
version:             0.1.0.0
synopsis:            Mezzo example compositions
description:         Compositions implemented in the Mezzo EDSL.
homepage:            https://github.com/DimaSamoz/mezzo
license:             MIT
license-file:        LICENSE
author:              Dima Szamozvancev
maintainer:          ds709@cam.ac.uk
copyright:           2017 Dima Samozvancev
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fur-elise
  hs-source-dirs:      fur-elise
  main-is:             FurElise.hs
  other-modules:       FurElise.Theme
                     , FurElise.Episode1
                     , FurElise.Episode2
                     , FurElise.Episode3
                     , FurElise.Episode4
  default-language:    Haskell2010
  default-extensions:  TypeInType
  build-depends:       base >= 4.7 && < 5
                     , mezzo

executable happy-birthday
  hs-source-dirs:      other
  main-is:             HappyBirthday.hs
  default-language:    Haskell2010
  default-extensions:  TypeInType
  build-depends:       base >= 4.7 && < 5
                     , mezzo

executable harmonisation
  hs-source-dirs:      other
  main-is:             Harmonisation.hs
  default-language:    Haskell2010
  default-extensions:  TypeInType
  build-depends:       base >= 4.7 && < 5
                     , mezzo

executable counterpoint
  hs-source-dirs:      other
  main-is:             Counterpoint.hs
  default-language:    Haskell2010
  default-extensions:  TypeInType
  build-depends:       base >= 4.7 && < 5
                     , mezzo

executable chopin
  hs-source-dirs:      chopin
  main-is:             Chopin.hs
  other-modules:       Chopin.Part1
                     , Chopin.Part2
  default-language:    Haskell2010
  default-extensions:  TypeInType
  build-depends:       base >= 4.7 && < 5
                     , mezzo
