name:                mezzo-examples
version:             0.2.0.0
synopsis:            Mezzo example compositions
description:         Compositions implemented in the Mezzo EDSL.
homepage:            https://github.com/DimaSamoz/mezzo
license:             MIT
license-file:        LICENSE
author:              Dima Szamozvancev
maintainer:          ds709@cam.ac.uk
copyright:           2017 Dima Samozvancev
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Other.Bach
                     , Other.Counterpoint
                     , Other.HappyBirthday
                     , Other.Harmonisation
                     , Other.Bumblebee
                     , Other.ClappingMusic

                     , FurElise
                     , FurElise.Theme
                     , FurElise.Episode1
                     , FurElise.Episode2
                     , FurElise.Episode3
                     , FurElise.Episode4

                     , Chopin
                     , Chopin.Part1
                     , Chopin.Part2

  build-depends:       base >= 4.7 && < 5
                     , mezzo
  default-language:    Haskell2010
  default-extensions:  TypeInType
